@@ -59,6 +59,9 @@ class configuracionDialog(wx.Dialog):
 		self.check_donaciones.SetValue(config['donations'])
 		self.check_donaciones.Bind(wx.EVT_CHECKBOX, lambda event: self.checar(event,'donations'))
 		boxSizer_1.Add(self.check_donaciones)
+		self.check_salir = wx.CheckBox(self.treeItem_1, wx.ID_ANY, _("preguntar si desea salir de la app al cerrar."))
+		self.check_salir.SetValue(config['salir'])
+		self.check_salir.Bind(wx.EVT_CHECKBOX, lambda event: self.checar(event,'salir'))
 		self.check_actualizaciones = wx.CheckBox(self.treeItem_1, wx.ID_ANY, _("Comprobar si hay actualizaciones al iniciar la app"))
 		self.check_actualizaciones.SetValue(config['updates'])
 		self.check_actualizaciones.Bind(wx.EVT_CHECKBOX, lambda event: self.checar(event,'updates'))
